[gd_scene load_steps=26 format=3 uid="uid://cmg6jlrsx2q7u"]

[ext_resource type="Script" uid="uid://bi7q8kx45r5ul" path="res://map/buyables/death_buyable.gd" id="1_05ulx"]
[ext_resource type="PackedScene" uid="uid://dk3105wepu4p0" path="res://map/buyables/button/buyable_button.tscn" id="2_4hjx4"]
[ext_resource type="Texture2D" uid="uid://bd7xgi03xif6i" path="res://map/hell/sponge 1.png" id="3_0gfp7"]
[ext_resource type="Texture2D" uid="uid://ikecg1tctjsm" path="res://map/hell/sponge 2.png" id="4_oobf3"]
[ext_resource type="Script" uid="uid://ck0su03wwl836" path="res://map/hell/sponge_13.gd" id="4_tn6sd"]
[ext_resource type="Texture2D" uid="uid://cp0j1q3uikte0" path="res://map/hell/sponge 3.png" id="5_tn6sd"]
[ext_resource type="Texture2D" uid="uid://4qwt32l80ctg" path="res://map/hell/sponge 4.png" id="6_wv7gc"]
[ext_resource type="Texture2D" uid="uid://bj1g7ei4iyog0" path="res://map/hell/sponge 5.png" id="7_awhbo"]
[ext_resource type="Texture2D" uid="uid://b3sbydiijxs2r" path="res://map/hell/sponge 6.png" id="8_odvdo"]
[ext_resource type="Texture2D" uid="uid://cfr8lsxnpdt7d" path="res://map/hell/sponge 7.png" id="9_4rdd4"]
[ext_resource type="Texture2D" uid="uid://bft8682ccfn5h" path="res://map/hell/sponge 8.png" id="10_nftfw"]
[ext_resource type="Texture2D" uid="uid://dmmms8ymupqej" path="res://map/hell/sponge 9.png" id="11_sxaul"]
[ext_resource type="Texture2D" uid="uid://d1hahludg4ygf" path="res://map/hell/sponge 10.png" id="12_sumad"]
[ext_resource type="Texture2D" uid="uid://negygyvqpiq2" path="res://map/hell/sponge 11.png" id="13_sr8do"]
[ext_resource type="Texture2D" uid="uid://4rirvg268xtu" path="res://map/hell/sponge 12.png" id="14_25rhc"]
[ext_resource type="Texture2D" uid="uid://b75r6ot06rweo" path="res://map/hell/dawko 1.png" id="15_c7ooc"]
[ext_resource type="Script" uid="uid://bbv8q4kwkanh2" path="res://map/hell/dawko_1.gd" id="16_4hjx4"]
[ext_resource type="Texture2D" uid="uid://cfqdcb4gp45i6" path="res://map/hell/costume4.svg" id="17_0gfp7"]
[ext_resource type="Texture2D" uid="uid://big5vvkqvlqx4" path="res://map/hell/costume1.svg" id="19_oobf3"]
[ext_resource type="PackedScene" uid="uid://ca1pjtml30rad" path="res://global_assets/speech_bubble/talking_speech_bubble.tscn" id="20_bqwfh"]
[ext_resource type="Script" uid="uid://dwjkt3u5rmk8y" path="res://map/hell/gums.gd" id="20_svslg"]
[ext_resource type="Script" uid="uid://c8jubnsknh8nd" path="res://global_assets/polygon_collision_and_shape.gd" id="20_wgn6p"]
[ext_resource type="PackedScene" uid="uid://csm6hrevkf01v" path="res://map/hell/horsehell/horse_hell.tscn" id="22_bqwfh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0jq6"]
size = Vector2(749.649, 421.705)

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_svslg"]

[node name="Hell" type="Node2D"]

[node name="DeathBuyable" type="Node2D" parent="."]
position = Vector2(-5299.28, -236)
script = ExtResource("1_05ulx")
id = "deathbutton"
stay_on_buy = true
metadata/_custom_type_script = "uid://de7j141xed3p4"

[node name="DeathButton" parent="." instance=ExtResource("2_4hjx4")]
position = Vector2(-5299.28, -236)
buyable_id = "deathbutton"
buyable_name = "Die.. At a price."
price = 2
stay_on_buy = true

[node name="the sponges" type="Node2D" parent="."]

[node name="Sponge13" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(5818.72, 841)
scale = Vector2(0.0951062, 0.108416)
texture = ExtResource("3_0gfp7")
script = ExtResource("4_tn6sd")

[node name="Sponge1" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(-5709.28, -265)
scale = Vector2(0.660714, 0.617155)
texture = ExtResource("3_0gfp7")

[node name="Sponge2" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(-4693.28, -278)
scale = Vector2(0.728426, 0.728426)
texture = ExtResource("4_oobf3")

[node name="Sponge3" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(-3808.28, -282)
scale = Vector2(0.873288, 0.851682)
texture = ExtResource("5_tn6sd")

[node name="Sponge4" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(-3036.28, -281)
scale = Vector2(0.816354, 0.866782)
texture = ExtResource("6_wv7gc")

[node name="Sponge5" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(-2380.28, -287)
texture = ExtResource("7_awhbo")

[node name="Sponge6" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(-1688.28, -282)
texture = ExtResource("8_odvdo")

[node name="Sponge7" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(-976.28, -277)
texture = ExtResource("9_4rdd4")

[node name="Sponge8" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(-236.28, -286)
texture = ExtResource("10_nftfw")

[node name="Sponge9" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(394.72, -281)
texture = ExtResource("11_sxaul")

[node name="Sponge10" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(1052.72, -292)
scale = Vector2(0.760135, 0.760135)
texture = ExtResource("12_sumad")

[node name="Sponge11" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(1841.72, -301)
scale = Vector2(0.86965, 0.944444)
texture = ExtResource("13_sr8do")

[node name="Sponge12" type="Sprite2D" parent="the sponges"]
z_index = -1
position = Vector2(2642.72, -271)
scale = Vector2(1.69718, 1.69718)
texture = ExtResource("14_25rhc")

[node name="Dawko1" type="Sprite2D" parent="the sponges"]
position = Vector2(3696.72, -382)
scale = Vector2(4.05422, 4.05422)
texture = ExtResource("15_c7ooc")
script = ExtResource("16_4hjx4")

[node name="Node2D" type="Node2D" parent="the sponges"]

[node name="Feelin Tooth2" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(5624.72, -117.999)
rotation = 6.27855
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth3" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(5695.72, -117.999)
rotation = 6.27855
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth4" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(5765.72, -117.999)
rotation = 6.27855
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth5" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(5836.72, -117.999)
rotation = 6.27855
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth6" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(5907.72, -117.999)
rotation = 6.27855
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth7" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(5978.72, -117.999)
rotation = 6.27855
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth8" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(6048.72, -117.999)
rotation = 6.27855
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth9" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(6119.72, -117.999)
rotation = 6.27855
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth10" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(6192.72, -117.999)
rotation = 6.27855
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth11" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(5624.72, -702)
rotation = 3.13916
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth12" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(5695.72, -702)
rotation = 3.13916
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth13" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(5765.72, -702)
rotation = 3.13916
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth14" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(5836.72, -702)
rotation = 3.13916
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth15" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(5907.72, -702)
rotation = 3.13916
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth16" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(5978.72, -702)
rotation = 3.13916
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth17" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(6048.72, -702)
rotation = 3.13916
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth18" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(6119.72, -702)
rotation = 3.13916
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth19" type="Sprite2D" parent="the sponges/Node2D"]
z_index = 1
position = Vector2(6192.72, -702)
rotation = 3.13916
scale = Vector2(2.14628, 2.55877)
skew = 0.000132799
texture = ExtResource("17_0gfp7")

[node name="Feelin Tooth" type="Sprite2D" parent="the sponges/Node2D"]
position = Vector2(4873.72, -161)
rotation = 1.5725
scale = Vector2(1.87901, 1.95352)
texture = ExtResource("17_0gfp7")

[node name="Gums" type="Sprite2D" parent="the sponges/Node2D"]
position = Vector2(6400, -456)
scale = Vector2(2.27173, 2.27173)
texture = ExtResource("19_oobf3")
script = ExtResource("20_svslg")

[node name="TalkingSpeechBubble" parent="the sponges/Node2D/Gums" instance=ExtResource("20_bqwfh")]
anchors_preset = -1
anchor_right = 0.126
anchor_bottom = 0.151
offset_left = 12.6114
offset_top = -81.4186
offset_right = 183.917
offset_bottom = -9.49856
scale = Vector2(0.5, 0.5)
metadata/_edit_use_anchors_ = true

[node name="TalkHitbox" type="Area2D" parent="the sponges/Node2D/Gums"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="the sponges/Node2D/Gums/TalkHitbox"]
position = Vector2(27.9526, 0.000137329)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_i0jq6")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="the sponges/Node2D/Gums"]
stream = SubResource("AudioStreamPolyphonic_svslg")
volume_db = 8.914

[node name="Ground" type="StaticBody2D" parent="."]

[node name="Polygon2D3" type="Polygon2D" parent="Ground"]
position = Vector2(3696.72, -479)
color = Color(0.74902, 0.392157, 0.0588235, 1)
polygon = PackedVector2Array(-175, 480, 443, 477, 338, 693, 225, 819, 204, 705, 140, 813, 70.9995, 702, 63.9995, 805, -71.0005, 706)
script = ExtResource("20_wgn6p")
metadata/_custom_type_script = "uid://c8jubnsknh8nd"

[node name="Polygon2D7" type="Polygon2D" parent="Ground"]
position = Vector2(4983.82, -612.4)
color = Color(0.74902, 0.392157, 0.0588235, 1)
polygon = PackedVector2Array(-175, 480, 443, 477, 338, 693, 225, 819, 204, 705, 140, 813, 70.9995, 702, 63.9995, 805, -71.0005, 706)
script = ExtResource("20_wgn6p")
metadata/_custom_type_script = "uid://c8jubnsknh8nd"

[node name="imgivingthisanamecollision" type="CollisionPolygon2D" parent="Ground"]
position = Vector2(6630.82, -769.4)
scale = Vector2(2.36, 2.36)
polygon = PackedVector2Array(-108.516, 260.339, -28.4316, 257.373, 574.958, -48.9827, -20.8047, 321.78, -69.957, 786.187, -178.432, 732.373, -361.906, 730.255, -361.906, 696.356, -237.33, 699.746, -82.127, 632.797)

[node name="imgivingthisaname" type="Polygon2D" parent="Ground"]
position = Vector2(6314.82, -812.4)
scale = Vector2(2.36, 2.36)
color = Color(0.74902, 0.392157, 0.0588235, 1)
polygon = PackedVector2Array(105.889, 275.594, 708.854, -30.7622, 113.092, 340, 63.9995, 805, 25.3801, 278.136)

[node name="Polygon2D8" type="Polygon2D" parent="Ground"]
position = Vector2(5767.82, -660.4)
color = Color(0.854767, 0.247041, 0.310889, 1)
polygon = PackedVector2Array(-175, 480, 456.898, 475.4, 455.898, 689.4, 225, 819, 204, 705, 140, 813, 70.9995, 702, 63.9995, 805, -173.102, 684.4)
script = ExtResource("20_wgn6p")
metadata/_custom_type_script = "uid://c8jubnsknh8nd"

[node name="Polygon2D9" type="Polygon2D" parent="Ground"]
position = Vector2(6051.72, -157.001)
rotation = -3.13939
color = Color(0.854767, 0.247041, 0.310889, 1)
polygon = PackedVector2Array(-175, 480, 456.898, 475.4, 455.898, 689.4, 225, 819, 204, 705, 140, 813, 70.9995, 702, 63.9995, 805, -173.102, 684.4)
script = ExtResource("20_wgn6p")
metadata/_custom_type_script = "uid://c8jubnsknh8nd"

[node name="Polygon2D4" type="Polygon2D" parent="Ground"]
position = Vector2(4400.72, -479)
color = Color(0.74902, 0.392157, 0.0588235, 1)
polygon = PackedVector2Array(-171, 471, -83.0005, 471, -80.0005, 708, -126, 742, -172, 706)
script = ExtResource("20_wgn6p")
metadata/_custom_type_script = "uid://c8jubnsknh8nd"

[node name="Polygon2D5" type="Polygon2D" parent="Ground"]
position = Vector2(4584.72, -553)
color = Color(0.74902, 0.392157, 0.0588235, 1)
polygon = PackedVector2Array(-171, 471, -83.0005, 471, -80.0005, 708, -126, 742, -172, 706)
script = ExtResource("20_wgn6p")
metadata/_custom_type_script = "uid://c8jubnsknh8nd"

[node name="Polygon2D6" type="Polygon2D" parent="Ground"]
position = Vector2(4760.72, -593)
color = Color(0.74902, 0.392157, 0.0588235, 1)
polygon = PackedVector2Array(-171, 471, -83.0005, 471, -80.0005, 708, -126, 742, -172, 706)
script = ExtResource("20_wgn6p")
metadata/_custom_type_script = "uid://c8jubnsknh8nd"

[node name="Polygon2D11" type="Polygon2D" parent="Ground"]
position = Vector2(8225.72, -1401)
color = Color(0.74902, 0.392157, 0.0588235, 1)
polygon = PackedVector2Array(-171, 471, -83.0005, 471, -80.0005, 708, -126, 742, -172, 706)
script = ExtResource("20_wgn6p")
metadata/_custom_type_script = "uid://c8jubnsknh8nd"

[node name="Polygon2D12" type="Polygon2D" parent="Ground"]
position = Vector2(8425.72, -1457)
color = Color(0.74902, 0.392157, 0.0588235, 1)
polygon = PackedVector2Array(-171, 471, -83.0005, 471, -80.0005, 708, -126, 742, -172, 706)
script = ExtResource("20_wgn6p")
metadata/_custom_type_script = "uid://c8jubnsknh8nd"

[node name="Polygon2D13" type="Polygon2D" parent="Ground"]
position = Vector2(8625.72, -1505)
color = Color(0.74902, 0.392157, 0.0588235, 1)
polygon = PackedVector2Array(-171, 471, -83.0005, 471, -80.0005, 708, -126, 742, -172, 706)
script = ExtResource("20_wgn6p")
metadata/_custom_type_script = "uid://c8jubnsknh8nd"

[node name="Polygon2D14" type="Polygon2D" parent="Ground"]
position = Vector2(8828.32, -1548.7)
color = Color(0.74902, 0.392157, 0.0588235, 1)
polygon = PackedVector2Array(-171, 471, -83.0005, 471, -80.0005, 708, -126, 742, -172, 706)
script = ExtResource("20_wgn6p")
metadata/_custom_type_script = "uid://c8jubnsknh8nd"

[node name="Polygon2D2" type="Polygon2D" parent="Ground"]
position = Vector2(-5676.68, -485.6)
color = Color(0.74902, 0.392157, 0.0588235, 1)
polygon = PackedVector2Array(-175, 480, 9039.4, 472.6, 8992.4, 761.6, -71, 790)
script = ExtResource("20_wgn6p")
metadata/_custom_type_script = "uid://c8jubnsknh8nd"

[node name="HorseHell" parent="." instance=ExtResource("22_bqwfh")]
position = Vector2(9542, -913)

[connection signal="body_entered" from="the sponges/Node2D/Gums/TalkHitbox" to="the sponges/Node2D/Gums" method="_on_talk_hitbox_body_entered"]
[connection signal="body_exited" from="the sponges/Node2D/Gums/TalkHitbox" to="the sponges/Node2D/Gums" method="_on_talk_hitbox_body_exited"]
